Update A Simple GAN Implementation.ipynb

--- a/A Simple GAN Implementation.ipynb
+++ b/A Simple GAN Implementation.ipynb
@@ -114,7 +114,7 @@
     "import imageio\n",
     "import numpy as np\n",
     "\n",
-    "x = imageio.imread('Profile.jpg')\n",
+    "x = imageio.imread('Prof.jpg')\n",
     "#img1 = np.reshape(img1,(128,96))\n",
     "\n",
     "#x = list(img1.ravel())\n",
