Update A Simple GAN Implementation.ipynb

--- a/A Simple GAN Implementation.ipynb
+++ b/A Simple GAN Implementation.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the purpose of explaining the Generative Adversarial Networks (GAN) easily we are generating a simple quadratic dataset. You can create or use more complex datasets."
+    "For the purpose of explaining the Generative Adversarial Networks (GAN) easily we are generating a simple quadratic dataset. A quadratic function creates a dataset that has x as the feature and y as the label.  You can create or use more complex datasets."
    ]
   },
   {
